@@ -26,6 +26,8 @@
   *  - Fixed ADC routines not correctly returning the last result when multiple channels were read
   *  - Fixed ADC routines failing to read the extended channels (Channels 8 to 13, Internal Temperature Sensor) on the
   *    U4 series USB AVR parts
+  *  - Fixed PDI programming mode in the AVRISP programmer project not exiting programming mode correctly (clear target
+  *    Reset key twice, set /RESET pin to pullup)
   *
   *  \section Sec_ChangeLog100219 Version 100219
   *
